force-app/main/default/objects/TimeEntryCategories__c/TimeEntryCategories__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to determine program specific time entry categories.</description>
    <label>Time Entry Categories</label>
</CustomObject>