force-app/main/default/objects/TimeEntryCategories__c/fields/Chapters__c.field-meta.xml
<CustomField>
    <fullName>Chapters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if this program uses this time tracking category.</description>
    <inlineHelpText>Check box if this program uses this time tracking category.</inlineHelpText>
    <label>Chapters</label>
    <type>Checkbox</type>
</CustomField>