force-app/main/default/objects/TimeEntryCategories__c/fields/Direct_or_Indirect__c.field-meta.xml
<CustomField>
    <fullName>Direct_or_Indirect__c</fullName>
    <description>Enter &quot;Direct&quot; for hours spent delivering service to community, and &quot;Indirect&quot; for hours spent on administration, meetings, non-service activities.</description>
    <inlineHelpText>Enter &quot;Direct&quot; for hours spent delivering service to community, and &quot;Indirect&quot; for hours spent on administration, meetings, non-service activities.</inlineHelpText>
    <label>Direct or Indirect</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>