force-app/main/default/objects/TimeEntryCategories__c/fields/Driver_Safety__c.field-meta.xml
<CustomField>
    <fullName>Driver_Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if this program uses this time tracking category.</description>
    <inlineHelpText>Check box if this program uses this time tracking category.</inlineHelpText>
    <label>Driver Safety</label>
    <type>Checkbox</type>
</CustomField>