force-app/main/default/objects/TimeEntryCategories__c/fields/General_Program__c.field-meta.xml
<CustomField>
    <fullName>General_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Program</label>
    <type>Checkbox</type>
</CustomField>