force-app/main/default/objects/TimeEntryCategories__c/fields/Life_Reimagined__c.field-meta.xml
<CustomField>
    <fullName>Life_Reimagined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if this program uses this time tracking category.</description>
    <inlineHelpText>Check box if this program uses this time tracking category.</inlineHelpText>
    <label>Life Reimagined</label>
    <type>Checkbox</type>
</CustomField>