force-app/main/default/objects/TimeEntryCategories__c/fields/Stipend_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture if the time categories hours can be used to count against monthly hours needed for a stipend payment.</description>
    <inlineHelpText>If hours charged against this time entry category are stipend eligible, check this box. If the hours are not eligible to count towards monthly stipend hour requirement, leave this box unchecked.</inlineHelpText>
    <label>Stipend Eligible</label>
    <type>Checkbox</type>
</CustomField>