force-app/main/default/objects/TimeEntryCategories__c/fields/Tax_Aide__c.field-meta.xml
<CustomField>
    <fullName>Tax_Aide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if this program uses this time tracking category.</description>
    <inlineHelpText>Check box if this program uses this time tracking category.</inlineHelpText>
    <label>Tax-Aide</label>
    <type>Checkbox</type>
</CustomField>