force-app/main/default/objects/TimeEntryCategories__c/listViews/all_fields.listView-meta.xml
<ListView>
    <fullName>all_fields</fullName>
    <columns>Stipend_Eligible__c</columns>
    <columns>NAME</columns>
    <columns>Chapters__c</columns>
    <columns>Direct_or_Indirect__c</columns>
    <columns>Driver_Safety__c</columns>
    <columns>Experience_Corps__c</columns>
    <columns>Life_Reimagined__c</columns>
    <columns>States__c</columns>
    <columns>Tax_Aide__c</columns>
    <columns>Foundation__c</columns>
    <filterScope>Everything</filterScope>
    <label>all - fields</label>
</ListView>